[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cycu_11022345"
version = "2025.05.06"
description = "A short description of the cycu11022345 package"
readme = "README.md"
requires-python = ">=3.7"
authors = [
    { name="123", email="your.email@example.com" }
]
license = { text = "MIT" }
dependencies = [
    "build==1.2.2.post1",
    "certifi==2025.4.26",
    "colorama==0.4.6",
    "contourpy==1.3.2",
    "cycler==0.12.1",
    "cycu11022345 @ file:///C:/Users/User/Desktop/1/cycu_oop_11022345/20250506/dist/cycu11022345-2025.5.6.tar.gz#sha256=868c5cac8ada3e81c1c9b659280127706aa013cd2c63ea360a375f68d8c6cc68",
    "fonttools==4.57.0",
    "fuzzywuzzy==0.18.0",
    "geopandas==1.0.1",
    "greenlet==3.2.1",
    "kiwisolver==1.4.8",
    "matplotlib==3.10.1",
    "numpy==2.2.5",
    "packaging==25.0",
    "pandas==2.2.3",
    "pillow==11.2.1",
    "playwright==1.52.0",
    "pyee==13.0.0",
    "pyogrio==0.10.0",
    "pyparsing==3.2.3",
    "pyproj==3.7.1",
    "pyproject_hooks==1.2.0",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "shapely==2.1.0",
    "six==1.17.0",
    "typing_extensions==4.13.2",
    "tzdata==2025.2"
]

[project.urls]
"Homepage" = "https://your-homepage-url.com"
"Source" = "https://github.com/your-username/your-repo"